--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,5 +1,4 @@
 <app-header></app-header>
-<section>
-    <router-outlet></router-outlet>
+<section class="container">
+  <router-outlet></router-outlet>
 </section>
-
