--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
+<!-- Toolbar -->
+  <mat-toolbar color="primary" class="app-header">
+    <div>
+      <img src="https://www.criticaltechworks.com/img/_6AaJMV5c-logo_banner.svg" class="positronx rounded float-left">
+    </div>
+    <span class="positronx align-middle">CTW Interview Organizer</span>
+      <div>
+        <button mat-button mat-raised-button routerLink="login" routerLinkActive="active">Log in</button>
+        <button mat-button mat-raised-button routerLink="register" routerLinkActive="active">Register</button>
+      </div>
+  </mat-toolbar>
 <router-outlet></router-outlet>
