--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,108 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-image: url(http://cdn.sdcarnews.com/wp-content/uploads/2016/03/bmw-concept-4-1000x600.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  font-family: 'Roboto', sans-serif;
+}
+
+.app-header {
+  text-align: justify;
+  box-shadow: 0 3px 5px -1px rgba(28, 2, 145, 0.603);
+  background-color: rgb(0, 0, 120) !important;
+  justify-content: space-between;
+  
+}
+
+.login-wrapper {
+  height: 100%;
+  
+}
+
+.positronx {
+  justify-content: space-evenly;
+  text-align: center;
+  color: #ffffff;
+  width: 60%;
+}
+
+.box {
+   
+  top: 20%;
+  margin: 0;
+  position: absolute;
+  left: 40%;
+  
+  opacity: 85%;
+  box-shadow: 0 3px 5px -1px rgba(255, 255, 255, 0.603);
+  float: left;
+  padding: 40px 50px 50px 60px;
+  width: 100%;
+  background: #fff;
+  border-radius: 10px;
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  z-index: 5;
+  max-width: 330px;
+}
+
+.box.back {
+  transform: scale(.95);
+  -webkit-transform: scale(.95);
+  -ms-transform: scale(.95);
+  top: -20px;
+  opacity: .8;
+  z-index: -1;
+}
+
+.login-wrapper .example-form {
+  min-width: 100%;
+  max-width: 300px;
+  width: 100%;
+}
+
+.login-wrapper .example-full-width,
+.login-wrapper .btn-block {
+  width: 100%;
+  
+}
+
+.login-wrapper mat-card-header {
+  text-align: center;
+  width: 100%;
+  display: block;
+  font-weight: 700;
+  
+}
+
+.login-wrapper mat-card-header mat-card-title {
+  font-size: 30px;
+  margin: 0;
+  
+}
+
+.login-wrapper .mat-card {
+  padding: 40px 70px 50px;
+}
+
+.login-wrapper .mat-stroked-button {
+  border: 2px solid currentColor;
+  line-height: 54px;
+  background-size: 100%;
+  width: 100%;
+  padding-bottom: 2px;
+}
+
+.login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
+  padding: 0.8375em 0;
+}
