commit users table

--- a/src/app/layout/product/product.component.html
+++ b/src/app/layout/product/product.component.html
@@ -1,8 +1,8 @@
 <h2 translate>Questions
-        <button type="button" class="btn btn-primary right" (click)="updateProducts()" translate>
+        <button type="button" class="btn btn-primary right mt-2" (click)="updateProducts()" translate>
                 Update Questions
         </button>
-        <button type="button" class="btn btn-primary" (click)="openCreateModal()">
+        <button type="button" class="btn btn-primary mt-2" (click)="openCreateModal()">
                 <fa-icon [icon]="iconNew"></fa-icon>
         </button>
 </h2>
