--- a/src/app/layout/product/product-new/product-new.component.html
+++ b/src/app/layout/product/product-new/product-new.component.html
@@ -1,14 +1,13 @@
 <div class="modal-header">
-    <h4 class="modal-title pull-left">New Product</h4>
+    <h4 class="modal-title pull-left">Add Question</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
 <div class="modal-body">
-    <input class="w-100 p-1 m-1" name="iva" type="number" [(ngModel)]="product.iva" placeholder="iva" />
-    <input class="w-100 p-1 m-1" name="pvp" type="number" [(ngModel)]="product.pvp" placeholder="pvp" />
-    <input class="w-100 p-1 m-1" name="discount" type="number" [(ngModel)]="product.discount" placeholder="discount" />
+    <input class="w-100 p-1 m-1" name="question" type="text" [(ngModel)]="product.text" placeholder="question" />
+    <input class="w-100 p-1 m-1" name="category" type="text" [(ngModel)]="product.value" placeholder="example: java; javascript..." />
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default" (click)="triggerEvent()">Create</button>
+    <button type="button" class="btn btn-outline-info" (click)="triggerEvent()">Create</button>
 </div>
