--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import '~@swimlane/ngx-datatable/index.css';
 @import '~@swimlane/ngx-datatable/themes/material.scss';
 @import '~@swimlane/ngx-datatable/assets/icons.css';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css'; 
 html,
 body {
   height: 100%;
@@ -26,7 +27,6 @@ body {
   justify-content: space-between;
   
 }
-
 .login-wrapper {
   height: 100%;
   
@@ -110,3 +110,6 @@ body {
 .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
   padding: 0.8375em 0;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
