--- a/src/app/layout/shelf/shelf.component.html
+++ b/src/app/layout/shelf/shelf.component.html
@@ -1,4 +1,4 @@
-<h2 translate>Users
+<h2 translate>New Users
         <button type="button" class="btn btn-primary mt-2" (click)="openCreateModal()">
                 <fa-icon [icon]="iconNew"></fa-icon>
         </button>
