--- a/src/app/layout/account/account.component.html
+++ b/src/app/layout/account/account.component.html
@@ -1,10 +1,9 @@
-<h2 translate>New Users
-        <button type="button" class="btn btn-primary mt-2" (click)="openCreateModal()">
+<h2 translate>New Account
+        <button type="button" class="btn btn-primary mt-2" routerLink="/register" routerLinkActive="active">
                 <fa-icon [icon]="iconNew"></fa-icon>
         </button>
-        
 </h2>
 <ngx-datatable class="material" [columnMode]="'force'" [rows]="rows" [columns]="columns">
 </ngx-datatable>
-<!-- <app-tables [header]='["id","iva","pvp","discount"]' [data$]='products$' [theme]='"table-bordered"'
+<!-- <app-tables [header]='["question","answer","attributes"]' [data$]='questions$' [theme]='"table-bordered"'
   (clickedRow)='clickRow($event)'></app-tables> -->
