--- a/src/app/layout/question/question.component.html
+++ b/src/app/layout/question/question.component.html
@@ -1,5 +1,5 @@
 <h2 translate>New Question
-        <button type="button" class="btn btn-primary right" (click)="updateProducts()" translate>
+        <button type="button" class="btn btn-primary right" (click)="updateQuestions()" translate>
                 Update Products
         </button>
         <button type="button" class="btn btn-primary" (click)="openCreateModal()">
@@ -7,5 +7,5 @@
         </button>
 </h2>
 
-<app-tables [header]='["id","iva","pvp","discount"]' [data$]='products$' [theme]='"table-bordered"'
+<app-tables [header]='["question","answer","attributes"]' [data$]='questions$' [theme]='"table-bordered"'
         (clickedRow)='clickRow($event)'></app-tables>
