--- a/src/app/layout/shared/components/header/header.component.html
+++ b/src/app/layout/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand mb-0 h1" routerLink="" translate>Lista</a>
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-info">
+  <a class="navbar-brand mb-0 h1" routerLink="" translate>Options</a>
   <ul class="navbar-nav mr-auto">
       <li class="nav-item">
           <a class="nav-item nav-link" [routerLinkActive]="['active']" routerLink="/question" translate>Questões</a>
@@ -12,4 +12,5 @@
     {{name}}
   </span>
   <button class="btn btn-outline-info" (click)="logout()" translate>Sair</button>
-</nav>
+</nav> -->
+
