--- a/src/app/layout/shelf/shelf.component.html
+++ b/src/app/layout/shelf/shelf.component.html
@@ -1,5 +1,5 @@
 <h2 translate>Users
-        <button type="button" class="btn btn-primary mt-2" (click)="openCreateModal()">
+        <button type="button" class="btn btn-primary mt-2" routerLink="register" (click)="openCreateModal()">
                 <fa-icon [icon]="iconNew"></fa-icon>
         </button>
         
