--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,6 +1,23 @@
 <app-header></app-header>
-<section class="container">
+<!-- <app-sidenav></app-sidenav> -->
+<button (click)="_toggleSidebar()">Toggle sidebar</button>
 
-  <router-outlet></router-outlet>
+<ng-sidebar-container style="height: 100vh;">
 
-</section>
+	<!-- A sidebar -->
+	<ng-sidebar [(opened)]="_opened" position="left">
+		<ul>
+			<li>LISTAS</li>
+			<li>ULTILIZADORES</li>
+			<li>QUESTÕES</li>
+		</ul>
+	</ng-sidebar>
+
+	<!-- Page content -->
+	<div ng-sidebar-content>
+		<section class="container">
+      <router-outlet></router-outlet>  
+    </section>
+	</div>
+
+</ng-sidebar-container>
