--- a/src/styles.scss
+++ b/src/styles.scss
@@ -110,3 +110,13 @@ body {
 .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
   padding: 0.8375em 0;
 }
+
+/* navbar */
+.ng-sidebar {
+  background:rgb(120, 255, 255);
+  width: 20rem;
+  font-size: large;
+  font-family: Arial, Helvetica, sans-serif;
+  opacity: 70%;
+}
+
