--- a/src/app/layout/account/account.component.html
+++ b/src/app/layout/account/account.component.html
@@ -3,6 +3,9 @@
                 <fa-icon [icon]="iconNew"></fa-icon>
         </button>
 </h2>
+<input type="text" style="padding:8px;margin:15px auto;width:30%;" placeholder="Type to filter the name column..."
+        (keyup)="updateFilter($event)" />
+        
 <ngx-datatable class="material" [columnMode]="'force'" [rows]="rows" [columns]="columns">
 </ngx-datatable>
 <!-- <app-tables [header]='["question","answer","attributes"]' [data$]='questions$' [theme]='"table-bordered"'
