--- a/src/app/layout/question/question.component.html
+++ b/src/app/layout/question/question.component.html
@@ -1,11 +1,16 @@
 <h2 translate>New Question
-        <button type="button" class="btn btn-primary right" (click)="updateQuestions()" translate>
+        <!-- <button type="button" class="btn btn-primary right" (click)="updateQuestions()" translate>
                 Update Products
-        </button>
+        </button> -->
         <button type="button" class="btn btn-primary" (click)="openCreateModal()">
                 <fa-icon [icon]="iconNew"></fa-icon>
         </button>
 </h2>
+<input type="text" style="padding:8px;margin:15px auto;width:30%;" placeholder="Type to filter the name column..."
+        (keyup)="updateFilter($event)" />
+        
+<ngx-datatable class="material" [columnMode]="'force'" [rows]="rows" [columns]="columns">
+</ngx-datatable>
 
-<app-tables [header]='["question","answer","attributes"]' [data$]='questions$' [theme]='"table-bordered"'
-        (clickedRow)='clickRow($event)'></app-tables>
+<!-- <app-tables [header]='["question","answer","attributes"]' [data$]='questions$' [theme]='"table-bordered"'
+        (clickedRow)='clickRow($event)'></app-tables> -->
