--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -10,19 +10,19 @@
 
       <mat-card-content>
         <mat-form-field class="example-full-width">
-          <input mdbInput class="form-control w-100" id="Username" placeholder="Username">
+          <input mdbInput class="form-control w-100 mt-4" id="Username" placeholder="Username">
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-          <input mdbInput class="form-control w-100" id="email" placeholder="Email">
+          <input mdbInput class="form-control w-100 mt-2" id="email" placeholder="Email">
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-          <input mdbInput class="form-control w-100" placeholder="Password">
+          <input mdbInput class="form-control w-100 mt-2" placeholder="Password">
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-          <label class="font-weight-bold text-center">Choose a role:</label>
+          <label class="font-weight-bold text-center mt-2">Choose a role:</label>
           <select mdbInput class="form-control w-100">
             <option [value]="roles" *ngFor="let roles of Roles">{{roles}}
             </option>
@@ -31,8 +31,8 @@
 
       </mat-card-content>
 
-      <button type="button" class="btn btn-outline-info w-50">Create</button>
-      <button type="button" class="btn btn-outline-danger w-50" routerLink="/account">Cancel</button>
+      <button type="button" class="btn btn-outline-info w-50 mt-2">Create</button>
+      <button type="button" class="btn btn-outline-danger w-50 mt-2" routerLink="/account">Cancel</button>
 
     </form>
   </mat-card>
