--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <!-- <app-sidenav></app-sidenav> -->
-<button (click)="_toggleSidebar()">Toggle sidebar</button>
+<button class= "shitshow mat-button"  (click)="_toggleSidebar()" > SHITSHOW </button>
 
 <ng-sidebar-container style="height: 100vh;">
 
