--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -1,6 +1,6 @@
 /* navbar */
 -ng-host .ng-sidebar {
-    background: rgb(13,30,207)!important;
+    background: rgb(41, 231, 214)!important;
     width: 13rem;
   }
   
