--- a/src/styles.scss
+++ b/src/styles.scss
@@ -113,10 +113,20 @@ body {
 
 /* navbar */
 .ng-sidebar {
-  background:rgb(120, 255, 255);
+  background:rgb(41, 231, 214);
   width: 20rem;
   font-size: large;
   font-family: Arial, Helvetica, sans-serif;
-  opacity: 70%;
+  opacity: 100%;
 }
 
+.shitshow{
+  position: left;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  width: 5rem;
+  
+
+
+  
+}
