--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,6 +17,7 @@
           <input mdbInput class="form-control w-100 mt-4" name="password" type="password" [(ngModel)]="account.password" placeholder="password" />
         </mat-form-field>
       </mat-card-content>
+      <p *ngIf="error">{{this.msg}}</p>
       <button type="button" class="btn btn-outline-info w-100 mt-4" (click)="login()"> Log in </button>
     </form>
   </mat-card>
