background/cancel register

--- a/src/app/layout/question/question.component.html
+++ b/src/app/layout/question/question.component.html
@@ -1,4 +1,4 @@
-<h2 translate>New Question
+<h2 class="text-white" translate>New Question
         <!-- <button type="button" class="btn btn-primary right" (click)="updateQuestions()" translate>
                 Update Products
         </button> -->
