--- a/src/app/layout/account/account.component.html
+++ b/src/app/layout/account/account.component.html
@@ -1,4 +1,4 @@
-<h2 translate>New Account
+<h2 class="text-white" translate>New Account
         <button type="button" class="btn btn-primary mt-2" routerLink="/register" routerLinkActive="active">
                 <fa-icon [icon]="iconNew"></fa-icon>
         </button>
