--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   
   <mat-card class="box">
     <mat-card-header>
-      <mat-card-title class="card-title mb-5">
+      <mat-card-title class="card-title mb-2">
         Log in to your account
       </mat-card-title>
     </mat-card-header>
@@ -10,15 +10,15 @@
     <form class="example-form">
       <mat-card-content>
         <mat-form-field class="example-full-width">
-          <input mdbInput class="form-control w-100 mt-4" id="email" name="email" type="email" [(ngModel)]="account.email" placeholder="email" />
+          <input mdbInput class="form-control w-100 mt-2" name="email" type="email" [(ngModel)]="account.email" placeholder="email" />
         </mat-form-field>
         
         <mat-form-field class="example-full-width">
-          <input mdbInput class="form-control w-100 mt-4" name="password" type="password" [(ngModel)]="account.password" placeholder="password" />
+          <input mdbInput class="form-control w-100 mt-2"  name="password" type="password" [(ngModel)]="account.password" placeholder="password" />
         </mat-form-field>
       </mat-card-content>
       <p *ngIf="error">{{this.msg}}</p>
-      <button type="button" class="btn btn-outline-info w-100 mt-4" (click)="login()"> Log in </button>
+      <button type="button" class="btn btn-outline-info w-100 mt-2" (click)="login()"> Log in </button>
     </form>
   </mat-card>
   
