--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,2 +1,17 @@
   
-  
+ html,
+
+ body {
+   height: 100%;
+   margin: 0;
+   padding: 0;
+ }
+ 
+ body {
+   background-image: url(http://cdn.sdcarnews.com/wp-content/uploads/2016/03/bmw-concept-4-1000x600.jpg);
+   background-position: center;
+   background-size: cover;
+   background-repeat: no-repeat;
+   max-height: 80vh;
+   font-family: 'Roboto', sans-serif;
+ }
