--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="login-wrapper">
   <mat-card class="box">
     <mat-card-header>
-      <mat-card-title class="card-title mb-5">
+      <mat-card-title class="card-title mb-2">
         Create a new account
       </mat-card-title>
     </mat-card-header>
@@ -32,7 +32,7 @@
       </mat-card-content>
 
       <button type="button" class="btn btn-outline-info w-50 mt-2">Create</button>
-      <button type="button" class="btn btn-outline-danger w-50 mt-2" routerLink="/account">Cancel</button>
+      <button type="button" class="btn btn-outline-danger w-50 mt-2" (click)="back()">Cancel</button>
 
     </form>
   </mat-card>
