--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
     <img src="https://www.criticaltechworks.com/img/_6AaJMV5c-logo_banner.svg" class="positronx rounded float-left">
   </div>
   <div class="btn-group">
-    <button class="btn text-ligth font-weight-bold btn-info btn-outline-ligth" routerLink="question">Questions</button>
-    <button class="btn text-ligth font-weight-bold btn-info btn-outline-ligth" routerLink="account">Accounts</button>
+    <button class="btn text-ligth font-weight-bold btn-info btn-outline-ligth" routerLink="layout/question">Questions</button>
+    <button class="btn text-ligth font-weight-bold btn-info btn-outline-ligth" routerLink="layout/account">Accounts</button>
   </div>
     <div>
       <span class="navbar-text mx-3">
