--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -32,7 +32,7 @@
       </mat-card-content>
 
       <button type="button" class="btn btn-outline-info w-50 mt-2">Create</button>
-      <button type="button" class="btn btn-outline-danger w-50 mt-2" routerLink="/account">Cancel</button>
+      <button type="button" class="btn btn-outline-danger w-50 mt-2" routerLink="layout/account">Cancel</button>
 
     </form>
   </mat-card>
