--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -9,9 +9,9 @@
     <form class="example-form">
 
       <mat-card-content>
-        <mat-form-field class="example-full-width">
+        <!-- <mat-form-field class="example-full-width">
           <input mdbInput class="form-control w-100 mt-4" id="Username" placeholder="Username">
-        </mat-form-field>
+        </mat-form-field> -->
 
         <mat-form-field class="example-full-width">
           <input mdbInput class="form-control w-100 mt-2" id="email" placeholder="Email">
