--- a/src/app/layout/account/account.component.html
+++ b/src/app/layout/account/account.component.html
@@ -3,10 +3,18 @@
                 <fa-icon [icon]="iconNew"></fa-icon>
         </button>
 </h2>
-<input type="text" style="padding:8px;margin:15px auto;width:30%;" placeholder="Type to filter the name column..."
-        (keyup)="updateFilter($event)" />
-        
-<ngx-datatable class="material" [columnMode]="'force'" [rows]="rows" [columns]="columns">
-</ngx-datatable>
+
+<table id="account">
+        <tr>
+                <th *ngFor="let col of columns">
+                        {{col}}
+                </th>
+        </tr>
+        <tr *ngFor="let account of account">
+                <td *ngFor="let col of index">
+                        {{account[col]}}
+                </td>
+        </tr>
+</table>
 <!-- <app-tables [header]='["question","answer","attributes"]' [data$]='questions$' [theme]='"table-bordered"'
   (clickedRow)='clickRow($event)'></app-tables> -->
