--- a/src/app/layout/account/account.component.html
+++ b/src/app/layout/account/account.component.html
@@ -1,5 +1,8 @@
 <h2 class="text-white" translate>New Account
-        <button type="button" class="btn btn-primary mt-2" routerLink="/register" routerLinkActive="active">
+        <!-- <button type="button" class="btn btn-primary mt-2" routerLink="/register" routerLinkActive="active">
+                <fa-icon [icon]="iconNew"></fa-icon>
+        </button> -->
+        <button type="button" class="btn btn-primary" (click)="openCreateModal()">
                 <fa-icon [icon]="iconNew"></fa-icon>
         </button>
 </h2>
