commit user table

--- a/src/app/layout/account/account.component.html
+++ b/src/app/layout/account/account.component.html
@@ -6,6 +6,8 @@
                 <fa-icon [icon]="iconNew"></fa-icon>
         </button>
 </h2>
+<input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+  
 
 <table id="account">
         <tr>
