--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -54,9 +54,8 @@
   <input class="w-100 p-1 m-1" name="email" type="email" [(ngModel)]="account.email" placeholder="Email">
   <input class="w-100 p-1 m-1" name="password" type="password" [(ngModel)]="account.password" placeholder="Password">
   <label class="font-weight-bold text-center mt-2">Choose a role:</label>
-  <select mdbInput class="form-control w-100">
-    <option [value]="roles" *ngFor="let roles of Roles">{{roles}}
-    </option>
+  <select mdbInput class="form-control w-100" [(ngModel)]="account.role">
+    <option [value]="roles" *ngFor="let roles of Roles">{{roles}}</option>
   </select>
 </div>
 <div class="text-center modal-footer">
