--- a/src/app/layout/question/question.component.html
+++ b/src/app/layout/question/question.component.html
@@ -1,15 +1,28 @@
 <h2 class="text-white" translate>New Question
-        <!-- <button type="button" class="btn btn-primary right" (click)="updateQuestions()" translate>
-                Update Products
-        </button> -->
+        <button type="button" class="btn btn-primary right" (click)="updateQuestions()" translate>
+                Update Questions
+        </button>
         <button type="button" class="btn btn-primary" (click)="openCreateModal()">
                 <fa-icon [icon]="iconNew"></fa-icon>
         </button>
 </h2>
 
         
-<ngx-datatable class="material" [columnMode]="'force'" [rows]="rows" [columns]="columns">
-</ngx-datatable>
+<!-- <ngx-datatable class="material" [columnMode]="'force'" [rows]="rows" [columns]="columns">
+</ngx-datatable> -->
+
+<table id="question">
+        <tr>
+                <th *ngFor="let col of columns">
+                        {{col}}
+                </th>
+        </tr>
+        <tr *ngFor="let question of question">
+                <td *ngFor="let col of index">
+                        {{question[col]}}
+                </td>
+        </tr>
+</table>
 
 <!-- <app-tables [header]='["question","answer","attributes"]' [data$]='questions$' [theme]='"table-bordered"'
         (clickedRow)='clickRow($event)'></app-tables> -->
