--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,11 +10,11 @@
     <form class="example-form">
       <mat-card-content>
         <mat-form-field class="example-full-width">
-          <input mdbInput class="form-control w-100 mt-2" name="email" type="email" [(ngModel)]="account.email" placeholder="Email" />
+          <input mdbInput class="form-control w-100 mt-2 myinput" name="email" type="email" [(ngModel)]="account.email" placeholder="Email" />
         </mat-form-field>
         
         <mat-form-field class="example-full-width">
-          <input mdbInput class="form-control w-100 mt-2"  name="password" type="password" [(ngModel)]="account.password" placeholder="Password" />
+          <input mdbInput class="form-control w-100 mt-2 myinput" name="password" type="password" [(ngModel)]="account.password" placeholder="Password" />
         </mat-form-field>
       </mat-card-content>
       <p *ngIf="error">{{this.msg}}</p>
