--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,12 @@
     <img src="https://www.criticaltechworks.com/img/_6AaJMV5c-logo_banner.svg" class="positronx rounded float-left">
   </div>
   <div class="btn-group">
-    <button class="btn text-ligth font-weight-bold btn-info btn-outline-ligth" routerLink="layout/question">Questions</button>
-    <button class="btn text-ligth font-weight-bold btn-info btn-outline-ligth" routerLink="layout/account">Accounts</button>
+    <button *ngIf="accountApi.getCurrentRole() == 'Admin'" class="btn text-ligth font-weight-bold btn-info btn-outline-ligth" routerLink="layout/question">Questions</button>
+    <button *ngIf="accountApi.getCurrentRole() == 'Admin'" class="btn text-ligth font-weight-bold btn-info btn-outline-ligth" routerLink="layout/account">Accounts</button>
   </div>
-    <div>
-      <span class="navbar-text mx-3">
-        {{name}}
+    <div *ngIf="accountApi.isAuthenticated()">
+      <span class="navbar-text mx-3 text-white">
+        {{accountApi.getCurrentName()}}
       </span>
       <button class="btn text-ligth font-weight-bold btn-dark btn-outline-danger" routerLink="login" (click)="logout()">Logout</button>
     </div>
