--- a/src/app/layout/account/account.component.html
+++ b/src/app/layout/account/account.component.html
@@ -6,7 +6,9 @@
                 <fa-icon [icon]="iconNew"></fa-icon>
         </button>
 </h2>
-<input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+<!-- <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter"> -->
+
+<input (keyup)="getByEmail()" [(ngModel)] = "value" placeholder="Filter">
 
 <table id="account">
         <tr>
