questions table now updates on question creation

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -4,7 +4,7 @@
 
 <ng-sidebar-container style="height: 100vh;">
 
-	<ng-sidebar [(opened)]="_opened" position="left">
+	<ng-sidebar [(opened)]="_opened" position="left" [mode]= "'push'">
 		<ul>
 			<li>LISTAS</li>
 			<li>ULTILIZADORES</li>
