--- a/src/app/layout/question/question-new/question-new.component.html
+++ b/src/app/layout/question/question-new/question-new.component.html
@@ -11,5 +11,5 @@
 </div>
 <div class="modal-footer">
     <!--<button type="button" class="btn btn-default" (click)="triggerEvent()">Create</button>-->
-    <button type="button" class="btn btn-outline-info" (click)="new()" (click)="bsModalRef.hide()">Create</button>
+    <button type="button" class="btn btn-outline-info" (click)="create()" (click)="bsModalRef.hide()">Create</button>
 </div>
