--- a/src/app/layout/question/question.component.html
+++ b/src/app/layout/question/question.component.html
@@ -17,7 +17,7 @@
                         {{col}}
                 </th>
         </tr>
-        <tr *ngFor="let question of questions">
+        <tr *ngFor="let question of questions$ | async">
                 <td *ngFor="let col of index">
                         {{question[col]}}
                 </td>
