--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -5,8 +5,14 @@ body {
   padding: 0;
 }
 
+h3{
+  color: white;
+  text-align: center;
+  margin-top: 6%;
+}
+
 body {
-  background-image: url(https://media1.giphy.com/media/l4XfgLyXAnyzCh7vfY/giphy.gif?cid=790b76111da384d72cf42191b1a37dd711077bfa1441a95b&rid=giphy.gif);
+  background-image: url(https://media1.giphy.com/media/l4XfgLyXAnyzCh7vfY/giphy.gif?cid=790b76111da34d72cf42191b1a37dd711077bfa1441a95b&rid=giphy.gif);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
