--- a/src/app/layout/question/question.component.scss
+++ b/src/app/layout/question/question.component.scss
@@ -3,8 +3,15 @@ h1{
     color: blue;
 }
 
+h2{
+    padding-top: 3%;
+    color:whitesmoke;
+
+
+}
+
 #question {
-    font-family: "Trebuchet MS",Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
@@ -26,6 +33,17 @@ h1{
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: blue;
+    background-color: rgb(43, 42, 46);
     color: white;
+}
+
+.QuestButton{
+    background-color:rgb(25, 196, 194)!important;
+    border-radius: 60px;
+    border: 0px;
+    size: 5px;
+}
+
+.QuestIcon{
+    size: 10px;
 }
