--- a/src/app/layout/account/account.component.html
+++ b/src/app/layout/account/account.component.html
@@ -8,7 +8,7 @@
 </h2>
 <!-- <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter"> -->
 
-<input (keyup)="getByEmail()" [(ngModel)] = "value" placeholder="Filter">
+<input (keyup)="getByEmail()" [(ngModel)] = "value" placeholder="  Filter" style="width: 100%" class="rounded mb-2">
 
 <table id="account">
         <tr>
