--- a/src/app/layout/account/account.component.scss
+++ b/src/app/layout/account/account.component.scss
@@ -9,8 +9,9 @@ h1{
     width: 100%;
 }
 
-#account td, #account th {
-    border: 1px solid white;
+
+#account td {
+    border: 1px solid rgb(0, 0, 0);
     padding: 8px;
 }
 
@@ -25,7 +26,8 @@ h1{
 #account th{
     padding-top: 12px;
     padding-bottom: 12px;
-    text-align: left;
+    border: none;
+    text-align: center;
     background-color: blue;
     color: white;
 }
