--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
       <span class="navbar-text mx-3 text-white">
         {{accountApi.getCurrentName()}}
       </span>
-      <button class="btn text-ligth font-weight-bold btn-dark btn-outline-danger" routerLink="login" (click)="logout()">Logout</button>
+      <button class="LogButton" routerLink="login" (click)="logout()">Logout</button>
     </div>
 </mat-toolbar>
 
