--- a/src/app/layout/account/account.component.scss
+++ b/src/app/layout/account/account.component.scss
@@ -3,31 +3,80 @@ h1{
     color: blue;
 }
 
-#account {
-    font-family: "Trebuchet MS",Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
+h2{
+    padding-top: 3%;
+    color:white;
+
+
+}
+
+#filter {
+    text-align: left;
     width: 100%;
 }
 
+#account {
+    font-family: "Trebuchet MS",Arial, Helvetica, sans-serif;
+    border-collapse: separate;
+    border-spacing: 0px;
+    width: 100%;
+}
+
+/* top-left border-radius */
+table tr:first-child th:first-child {
+    border-top-left-radius: 20px;
+  }
+  
+  /* top-right border-radius */
+  table tr:first-child th:last-child {
+    border-top-right-radius: 20px;
+  }
+  
+  /* bottom-left border-radius */
+  table tr:last-child td:first-child {
+    border-bottom-left-radius: 20px;
+  }
+  
+  /* bottom-right border-radius */
+  table tr:last-child td:last-child {
+    border-bottom-right-radius: 20px;
+  }
+
+
 
 #account td {
-    border: 1px solid rgb(0, 0, 0);
+    border-bottom: 2px solid rgb(0, 0, 0);
     padding: 8px;
+    border-collapse: collapse;
 }
 
-#account tr,:nth-child(even) {
+#account tr {
     background-color: white;
+    border-bottom: 2px solid rgb(0, 0, 0);
+    border-collapse: collapse;
+    text-align: center;
 }
 
-/* #account tr:hover{
-    background-color: yellow;
-} */
+#account tr:hover{
+    background-color: lightgrey;
+} 
 
 #account th{
     padding-top: 12px;
     padding-bottom: 12px;
     border: none;
     text-align: center;
-    background-color: blue;
+    background-color: rgb(0, 0, 120) !important;
     color: white;
+}
+
+.accountButton{
+    background-image: linear-gradient(to right, rgb(0, 255, 251) , rgb(13, 30, 207));
+    
+    border-radius: 60px;
+    border: 0px;
+    size: 5px;
+    animation-delay: 1000ms;
+    animation-timing-function: 1000ms;
+
 }
