--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -21,5 +21,25 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+/* navbar */
+.ng-sidebar {
+  
+  background:rgb(13, 30, 207);
+  width: 20%;
+  padding: 0;
+  text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
+  opacity: 100%;
+  
+}
+
+.selectors { 
+
+  padding: 10%;
+  width: 100%;
+  text-align:left;
+  color:rgb(25, 196, 194);
+  background-color: rgb(13, 30, 207);
+}
 
 
