--- a/src/app/layout/question/question.component.scss
+++ b/src/app/layout/question/question.component.scss
@@ -6,35 +6,58 @@ h1{
 
 h2{
     padding-top: 3%;
-    color:whitesmoke;
+    color:white;
 
 
 }
 
 #question {
-    font-family: Arial, sans-serif;
-    border-collapse: collapse;
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: separate;
+    border-spacing: 0px;
     width: 100%;
 }
 
+/* top-left border-radius */
+table tr:first-child th:first-child {
+    border-top-left-radius: 20px;
+  }
+  
+  /* top-right border-radius */
+  table tr:first-child th:last-child {
+    border-top-right-radius: 20px;
+  }
+  
+  /* bottom-left border-radius */
+  table tr:last-child td:first-child {
+    border-bottom-left-radius: 20px;
+  }
+  
+  /* bottom-right border-radius */
+  table tr:last-child td:last-child {
+    border-bottom-right-radius: 20px;
+  }
+
 #question td {
-    border: 1px solid rgb(0, 0, 0);
+    border-bottom: 2px solid rgb(0, 0, 0);
     padding: 8px;
 }
 
-#question tr,:nth-child(even) {
+#question tr {
     background-color: white;
+    border-bottom: 2px solid rgb(0, 0, 0);
+   
 }
 
-/* #question tr:hover{
-    background-color: yellow;
-} */
+#question tr:hover{
+    background-color: lightgrey;
+} 
 
 #question th{
     padding-top: 12px;
     padding-bottom: 20px;
-    text-align: left;
-    background-color: slateblue;
+    text-align: center;
+    background-color: rgb(0, 0, 120) !important;
     color: white;
 }
 
@@ -49,6 +72,5 @@ h2{
 
 }
 
-.QuestIcon{
-    size: 10px;
-}
+
+
