question table cell limit

--- a/src/app/layout/question/question.component.scss
+++ b/src/app/layout/question/question.component.scss
@@ -16,6 +16,7 @@ h2{
     border-collapse: separate;
     border-spacing: 0px;
     width: 100%;
+    
 }
 
 /* top-left border-radius */
@@ -41,12 +42,13 @@ table tr:first-child th:first-child {
 #question td {
     border-bottom: 2px solid rgb(0, 0, 0);
     padding: 8px;
+    max-width: 130px;
+    word-wrap: break-word;   
 }
 
 #question tr {
     background-color: white;
     border-bottom: 2px solid rgb(0, 0, 0);
-   
 }
 
 #question tr:hover{
