commit css e export pdf

--- a/src/app/layout/account/account.component.scss
+++ b/src/app/layout/account/account.component.scss
@@ -45,14 +45,14 @@ table tr:first-child th:first-child {
 
 
 #account td {
-    border-bottom: 2px solid rgb(0, 0, 0);
+    border-top: 2px solid rgb(0, 0, 0);
     padding: 8px;
     border-collapse: collapse;
 }
 
 #account tr {
     background-color: white;
-    border-bottom: 2px solid rgb(0, 0, 0);
+    border-top: 2px solid rgb(0, 0, 0);
     border-collapse: collapse;
     text-align: center;
 }
