--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -8,7 +8,7 @@
  }
  
  body {
-   background-image: url(http://cdn.sdcarnews.com/wp-content/uploads/2016/03/bmw-concept-4-1000x600.jpg);
+   background-image: url(https://www.shardagroup.com/images/shrda.gif);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
