commit pdfbutton css

--- a/src/app/layout/question/question.component.html
+++ b/src/app/layout/question/question.component.html
@@ -40,8 +40,8 @@
                                         <fa-icon [icon]="iconNew"></fa-icon>
                                 </button>
                                 <div>
-                                        <button class="btn btn-info" (click)="generatePdf()">
-                                                Open PDF
+                                        <button class="pdfButton" (click)="generatePdf()">
+                                              <span>Export PDF</span>
                                         </button>
                                 </div>
 
