--- a/src/app/layout/question/question.component.scss
+++ b/src/app/layout/question/question.component.scss
@@ -65,7 +65,6 @@ table tr:first-child th:first-child {
 
 .QuestButton{
     background-image: linear-gradient(to right, rgb(0, 255, 251) , rgb(13, 30, 207));
-    
     border-radius: 60px;
     border: 0px;
     size: 5px;
@@ -74,5 +73,49 @@ table tr:first-child th:first-child {
 
 }
 
+.pdfButton {
+    border-radius: 60px;
+    border: 0px;
+    background-color: rgb(0, 180, 177);
+    color: rgb(0, 0, 120);
+    font-size: 15px;
+    font-weight: bold;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    
+}
+.pdfButton::selection{
+    background-color: transparent;
+}
 
+.pdfButton span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+    
+  }
+  
+.pdfButton:hover {
+    background-color: rgb(0, 0, 120);
+    color: rgb(0, 180, 177);
+}
 
+.pdfButton span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.pdfButton:hover span {
+    padding-right: 25px;
+}
+
+.pdfButton:hover span:after {
+    opacity: 1;
+    right: 0;
+}
