commit edit and delete table buttons

--- a/src/app/layout/account/account.component.html
+++ b/src/app/layout/account/account.component.html
@@ -23,6 +23,10 @@
                         <td *ngFor="let col of index">
                                 {{account[col]}}
                         </td>
+                        <td style="width:150px">
+                                <button type="button" class="btn btn-outline-info mr-2">Edit</button>
+                                <button type="button" class="btn btn-outline-danger">X</button>
+                        </td>
                 </tr>
         </table>
         <!-- <app-tables [header]='["question","answer","attributes"]' [data$]='questions$' [theme]='"table-bordered"'
