--- a/src/app/layout/question/question.component.html
+++ b/src/app/layout/question/question.component.html
@@ -60,8 +60,8 @@
                                                 {{question[col]}}
                                         </td>
                                         <td style="width:150px">
-                                                <button type="button" class="btn btn-outline-info mr-2">Edit</button>
-                                                <button type="button" class="btn btn-outline-danger" (click)="deleteQuestion(this)">X</button>
+                                        <button type="button" class="btn btn-outline-info mr-2" (click)="editQuestion(this)">Edit</button>
+                                        <button type="button" class="btn btn-outline-danger" (click)="deleteQuestion(question.id)">X</button>
                                         </td>
                                 </tr>
                         </table>
