--- a/src/app/layout/account/account.component.html
+++ b/src/app/layout/account/account.component.html
@@ -2,10 +2,12 @@
         <!-- <button type="button" class="btn btn-primary mt-2" routerLink="/register" routerLinkActive="active">
                 <fa-icon [icon]="iconNew"></fa-icon>
         </button> -->
-        <button type="button" class="btn btn-primary" (click)="openCreateModal()">
+        <button type="button" class="AccountButton" (click)="openCreateModal()">
                 <fa-icon [icon]="iconNew"></fa-icon>
         </button>
 </h2>
+<br>
+<br>
 <!-- <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter"> -->
 
 <input (keyup)="getByEmail()" [(ngModel)] = "value" placeholder="Filter">
