--- a/src/app/layout/question/question.component.html
+++ b/src/app/layout/question/question.component.html
@@ -60,7 +60,7 @@
                                                 {{question[col]}}
                                         </td>
                                         <td style="width:150px">
-                                        <button type="button" class="btn btn-outline-info mr-2" (click)="editQuestion(this)">Edit</button>
+                                        <button type="button" class="btn btn-outline-info mr-2" (click)="editQuestion(question.id)">Edit</button>
                                         <button type="button" class="btn btn-outline-danger" (click)="deleteQuestion(question.id)">X</button>
                                         </td>
                                 </tr>
