--- a/src/app/layout/question/question-detail/question-detail.component.html
+++ b/src/app/layout/question/question-detail/question-detail.component.html
@@ -1,4 +1,4 @@
-<div class="text-center">
+<!-- <div class="text-center">
   <input class="w-100 p-1 m-1" name="question" type="string" [(ngModel)]="question.question" placeholder="question" />
   <input class="w-100 p-1 m-1" name="answer" type="string" [(ngModel)]="question.answer" placeholder="answer" />
   <input class="w-100 p-1 m-1" name="attributes" type="string" [(ngModel)]="question.attributes" placeholder="attributes" />
@@ -6,4 +6,4 @@
 </div>
 <button (click)="update()" class="btn btn-success w-100 m-1">Update</button>
 <button (click)="delete()" class="btn btn-danger w-100 m-1">Delete</button>
-<button routerLink="/question" class="btn btn-primary w-100 m-1">Back to Questions</button>
+<button routerLink="/question" class="btn btn-primary w-100 m-1">Back to Questions</button> -->
