--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,3 +12,81 @@
     from {background-color: rgb(0, 255, 251);}
     to {background-color: rgb(13, 30, 207);}
   }
+
+
+.logOutButton{
+  justify-content: right !important;
+  text-align: right!important;
+}
+
+
+/*
+  .qaButton{
+    font-family: Mark-Light, sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.29;
+    letter-spacing: normal;
+    color: rgb(255, 255, 255);
+    margin-right: 40px;
+    cursor: pointer;
+  }
+
+  .qaButton .active{
+    font-family: Mark-Medium, sans-serif;
+    font-weight: 500;
+    color: rgb(41, 231, 214);
+  } */
+
+
+  .qaButton {
+    border-radius: 60px;
+    border: 0px;
+    background-color: rgb(0, 0, 120);
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    font-weight: bold;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    outline: none;
+    
+    
+    
+}
+.qaButton::selection{
+    background-color: transparent;
+}
+
+.qaButton span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+    
+  }
+  
+.qaButton:hover {
+    background-color: rgb(0, 0, 120);
+    color: rgb(0, 255, 251);
+}
+
+.qaButton span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.qaButton:hover span {
+    padding-right: 25px;
+}
+
+.qaButton:hover span:after {
+    opacity: 1;
+    right: 0;
+}
