--- a/src/app/layout/question/question-new/question-new.component.html
+++ b/src/app/layout/question/question-new/question-new.component.html
@@ -19,5 +19,6 @@
     </select>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-outline-info" (click)="create()">Create</button>
+    
+    <button type="button" class="createButton" (click)="create()">Create</button>
 </div>
