--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -59,6 +59,6 @@
   </select>
 </div>
 <div class="text-center modal-footer">
-  <button type="button" class="btn btn-outline-info mt-2" (click)="register()" (click)="bsModalRef.hide()">Create</button>
+  <button type="button" class="registerButton " (click)="register()" (click)="bsModalRef.hide()">Create</button>
   <!-- <button type="button" class="btn btn-outline-danger mt-2" (click)="back()">Cancel</button> -->
 </div>
