--- a/src/app/layout/account/account-edit/account-edit.component.html
+++ b/src/app/layout/account/account-edit/account-edit.component.html
@@ -5,9 +5,9 @@
     </button>
   </div>
   <div class="modal-body">
-    <input class="w-100 p-1 m-1" name="name" type="name" [(ngModel)]="account.name" placeholder="Username">
-    <input class="w-100 p-1 m-1" name="email" type="email" [(ngModel)]="account.email" placeholder="Email">
-    <input class="w-100 p-1 m-1" name="password" type="password" [(ngModel)]="account.password" placeholder="Password">
+    <input class="w-100 p-1 m-1" name="name" type="name" [(ngModel)]="account.name">
+    <input class="w-100 p-1 m-1" name="email" type="email" [(ngModel)]="account.email">
+    <input class="w-100 p-1 m-1" name="password" type="password" [(ngModel)]="account.password">
     <label class="font-weight-bold text-center mt-2">Choose a role:</label>
     <select mdbInput class="form-control w-100" [(ngModel)]="account.role">
       <option [value]="roles" *ngFor="let roles of Roles">{{roles}}</option>
